--- a/hd-classifier.ipynb
+++ b/hd-classifier.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:55391ba08004f9a3c476dab250c23905ae406935f24a27211f9681f90d398569"
+  "signature": "sha256:3b2552cbebe0b44c796690863765090f56849766a8b315105ed8cbc95573d38e"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -2505,64 +2505,35 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "x = {'a': 1, 'b': open('lippiw2v'), 'c': 'blah'}\n",
-      "for k in x.keys():\n",
-      "    try:\n",
-      "        bson.BSON.encode({k: x[k]})\n",
-      "    except InvalidDocument:\n",
-      "        x.pop(k)\n"
+      "x = {'a': 1, 'b': open('lippiw2v'), 'c': 'blah', 'd': 'blah'}\n",
+      "#for k in x.keys():\n",
+      "#    try:\n",
+      "#        bson.BSON.encode({k: x[k]})\n",
+      "#    except InvalidDocument:\n",
+      "#        x.pop(k)"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 27
+     "prompt_number": 9
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "x"
+      "from flask import app"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 28,
-       "text": [
-        "{'a': 1, 'c': 'blah'}"
-       ]
-      }
-     ],
-     "prompt_number": 28
+     "outputs": [],
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "ls"
+      "from flask.request import "
      ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "ghtorrent (1).csv     j_kmeans.py         lippiw2v          Untitled0.ipynb\r\n",
-        "hd-classifier (1).py  j_kmeans.pyc        lippiw2v.corp     Untitled1.ipynb\r\n",
-        "hd-classifier.ipynb   ldalippi.lda        README.md\r\n",
-        "hd-classifier.py      ldalippi.lda.state  ticketScraper.py\r\n"
-       ]
-      }
-     ],
-     "prompt_number": 8
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
      "language": "python",
      "metadata": {},
      "outputs": []
