--- a/hd-classifier.ipynb
+++ b/hd-classifier.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:3b2552cbebe0b44c796690863765090f56849766a8b315105ed8cbc95573d38e"
+  "signature": "sha256:2237193dd4e7a0b74812c0c75b3db3323dacf91b3e5e76ca19b658eb6780ffbe"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -51,7 +51,7 @@
        ]
       }
      ],
-     "prompt_number": 2
+     "prompt_number": 4
     },
     {
      "cell_type": "code",
@@ -224,7 +224,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 3
+     "prompt_number": 5
     },
     {
      "cell_type": "code",
@@ -238,13 +238,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 5,
+       "prompt_number": 6,
        "text": [
         "17129"
        ]
       }
      ],
-     "prompt_number": 5
+     "prompt_number": 6
     },
     {
      "cell_type": "code",
@@ -2532,8 +2532,68 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "from flask.request import "
+      "import numpy as np"
      ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 8
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "np.random.rand()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 18,
+       "text": [
+        "0.6515958125046794"
+       ]
+      }
+     ],
+     "prompt_number": 18
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 27
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "for a in coll.find():\n",
+      "    a['json']['guesses'] = {'bug': np.random.rand(), 'feature': np.random.rand()}\n",
+      "    coll.update({\"_id\": a['_id']},a)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 36
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 35
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
      "language": "python",
      "metadata": {},
      "outputs": []
