done with web app

--- a/hd-classifier.ipynb
+++ b/hd-classifier.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:d37907f52668d58ff874a2d68209d463b02f0cecb2319f0d4dbefaaeb527fbd3"
+  "signature": "sha256:1b61d044237fd873180fc94f5a714a8b18624fae7804fcece24d64bb11432dab"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -2669,6 +2669,74 @@
      "metadata": {},
      "outputs": [],
      "prompt_number": 132
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "for x in coll.find_one():\n",
+      "    print x"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "url\n",
+        "project\n",
+        "json\n",
+        "_id\n",
+        "priority\n"
+       ]
+      }
+     ],
+     "prompt_number": 240
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "x = coll.find_one()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 244
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "for x in coll.find():\n",
+      "  if np.random.rand() < .5:\n",
+      "    x['json']['guesses']['random'] = np.random.rand()\n",
+      "  coll.update({'_id':x['_id']},x)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 268
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "print np.random.rand()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "0.38258690262\n"
+       ]
+      }
+     ],
+     "prompt_number": 266
     },
     {
      "cell_type": "code",
