code clean up/reworking

--- a/hd-classifier.ipynb
+++ b/hd-classifier.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:1b61d044237fd873180fc94f5a714a8b18624fae7804fcece24d64bb11432dab"
+  "signature": "sha256:a9e31f2de0a4a7fb955ef38b790a3dba6952ced61c1a2641c3ae5a38d4df1312"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -51,7 +51,7 @@
        ]
       }
      ],
-     "prompt_number": 60
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
@@ -224,7 +224,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 141
+     "prompt_number": 45
     },
     {
      "cell_type": "code",
@@ -238,13 +238,99 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 142,
+       "prompt_number": 46,
        "text": [
         "17129"
        ]
       }
      ],
-     "prompt_number": 142
+     "prompt_number": 46
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "url = baseurl + '&page=' + str(50)\n",
+      "a = requests.get(url,auth=HTTPBasicAuth('jlippi','###'))\n",
+      "json_list = a.json()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 76
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "t1 = json_list[5]"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 78
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "json_list = a.json()\n",
+      "t1 = json_list[5]\n",
+      "ticket = {}\n",
+      "required_cols = ['labels','title','body','severity','ticket_url',\n",
+      "                          'repo_url','project','created_at']"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 84
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "ticket = {'repo_url': url,\n",
+      "          'project': project,\n",
+      "          'title': t1['title'],\n",
+      "          'body': t1['body'],\n",
+      "          'severity': 3,\n",
+      "          'ticket_url': t1['html_url'],\n",
+      "          'created_at': t1['created_at'],\n",
+      "          'labels': list()}\n",
+      "for label in t1['labels']:\n",
+      "    ticket['labels'].append(label['name'])"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 92
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "ticket"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 93,
+       "text": [
+        "{'body': u'Today I ran into a confusing scenario. I started a new salt-minion, it was properly pointed to my salt-master, but when I would run salt-key -L, I would not get the key. It turns out the salt-master was actually not running and simply starting the salt-master made the key show up.\\n\\nIt occurred to me that a simple warning message could appear that would check the state of the salt-master and if it was not running, state so. Something like\\n\\n```bash\\n# salt-key -L\\nUnaccepted Keys:\\nAccepted Keys:\\nRejected:\\n[WARNING: salt-master is currently not running]\\n```',\n",
+        " 'created_at': u'2012-05-24T16:13:03Z',\n",
+        " 'labels': [],\n",
+        " 'project': 'saltstack',\n",
+        " 'repo_url': 'https://api.github.com/repos/saltstack/salt/issues?sort=updated&direction=asc&state=all&page=50',\n",
+        " 'severity': 3,\n",
+        " 'ticket_url': u'https://github.com/saltstack/salt/issues/1337',\n",
+        " 'title': u'salt-key should warn if salt-master is not running'}"
+       ]
+      }
+     ],
+     "prompt_number": 93
     },
     {
      "cell_type": "code",
@@ -266,7 +352,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 143
+     "prompt_number": 88
     },
     {
      "cell_type": "code",
@@ -318,7 +404,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 137
+     "prompt_number": 4
     },
     {
      "cell_type": "code",
@@ -336,14 +422,14 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "5173\n",
+        "5178\n",
         "17129\n",
-        "9685\n",
-        "Counter({u'Bug': 2430, u'Medium Severity': 1301, u'Feature': 1141, u'Low Severity': 604, u'Documentation': 475, u'Fixed Pending Verification': 473, u'in progress': 460, u'Bugfix - [Done] back-ported': 371, u'High Severity': 347, u'Low-Hanging Fruit': 340, u'Windows': 221, u'Salt-Cloud': 216, u'Regression': 158, u'Pending Discussion': 135, u'Duplicate': 128, u'Expected Behavior': 127, u'Cannot Reproduce': 106, u'Info Needed': 99, u'Question': 92, u'Salt-SSH': 92, u'Packaging': 70, u\"Won't Fix For Now\": 40, u'Execution Module': 38, u'State Module': 37, u'Upstream Bug': 36, u'Needs Testcase': 30, u'Multi-Master': 16, u'Critical': 15, u'RAET': 14, u'Confirmed': 14, u'Core': 14, u'Salt-API': 13, u'feature': 13, u'bug': 10, u'uncategorized': 5, u'Bugfix - back-port': 1, u'Blocker': 1, u'Other Module': 1, u'tt:not_started': 1})\n"
+        "9690\n",
+        "Counter({u'Bug': 2430, u'Medium Severity': 1301, u'Feature': 1140, u'Low Severity': 604, u'Documentation': 475, u'Fixed Pending Verification': 473, u'in progress': 460, u'Bugfix - [Done] back-ported': 371, u'High Severity': 347, u'Low-Hanging Fruit': 340, u'Windows': 221, u'Salt-Cloud': 216, u'Regression': 158, u'Pending Discussion': 135, u'Duplicate': 128, u'Expected Behavior': 127, u'Cannot Reproduce': 106, u'Info Needed': 99, u'Question': 92, u'Salt-SSH': 92, u'Packaging': 70, u\"Won't Fix For Now\": 40, u'Execution Module': 38, u'State Module': 37, u'Upstream Bug': 36, u'Needs Testcase': 30, u'Multi-Master': 16, u'Critical': 15, u'feature': 14, u'RAET': 14, u'Confirmed': 14, u'Core': 14, u'Salt-API': 13, u'bug': 12, u'uncategorized': 8, u'Bugfix - back-port': 1, u'Blocker': 1, u'Other Module': 1, u'tt:not_started': 1})\n"
        ]
       }
      ],
-     "prompt_number": 138
+     "prompt_number": 5
     },
     {
      "cell_type": "code",
@@ -356,7 +442,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 139
+     "prompt_number": 6
     },
     {
      "cell_type": "code",
@@ -530,7 +616,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 147
+     "prompt_number": 8
     },
     {
      "cell_type": "code",
@@ -561,7 +647,7 @@
        ]
       }
      ],
-     "prompt_number": 148
+     "prompt_number": 9
     },
     {
      "cell_type": "code",
@@ -573,15 +659,17 @@
      "metadata": {},
      "outputs": [
       {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 489,
-       "text": [
-        "4091"
+       "ename": "NameError",
+       "evalue": "name 'y_feature' is not defined",
+       "output_type": "pyerr",
+       "traceback": [
+        "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+        "\u001b[1;32m<ipython-input-10-0d3e7255155d>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0my_feature\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+        "\u001b[1;31mNameError\u001b[0m: name 'y_feature' is not defined"
        ]
       }
      ],
-     "prompt_number": 489
+     "prompt_number": 10
     },
     {
      "cell_type": "code",
@@ -601,7 +689,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 149
+     "prompt_number": 11
     },
     {
      "cell_type": "code",
@@ -647,7 +735,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 183
+     "prompt_number": 12
     },
     {
      "cell_type": "code",
@@ -659,7 +747,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 184
+     "prompt_number": 13
     },
     {
      "cell_type": "code",
@@ -669,13 +757,14 @@
       "vec_t = vec.fit_transform(' '.join(x) for x in all_sentences)\n",
       "id2word = {v: k for k, v in vec.vocabulary_.iteritems()}\n",
       "vec_corpus = gensim.matutils.Sparse2Corpus(vec_t.T)\n",
-      "lda = LdaMulticore(corpus=vec_corpus,id2word=id2word,iterations=200,num_topics=20,passes=100,workers=4)\n",
+      "#lda = LdaMulticore(corpus=vec_corpus,id2word=id2word,iterations=200,num_topics=20,passes=100,workers=4)\n",
+      "lda = LdaMulticore(corpus=vec_corpus,id2word=id2word,iterations=200,num_topics=2,passes=100,workers=4)\n",
       "lda.save('ldalippi.lda')"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 153
+     "prompt_number": 14
     },
     {
      "cell_type": "code",
@@ -726,7 +815,19 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "ename": "TypeError",
+       "evalue": "ufunc 'isnan' not supported for the input types, and the inputs could not be safely coerced to any supported types according to the casting rule ''safe''",
+       "output_type": "pyerr",
+       "traceback": [
+        "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+        "\u001b[1;32m<ipython-input-94-7d785ead34f4>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0misnan\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mNone\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+        "\u001b[1;31mTypeError\u001b[0m: ufunc 'isnan' not supported for the input types, and the inputs could not be safely coerced to any supported types according to the casting rule ''safe''"
+       ]
+      }
+     ],
+     "prompt_number": 94
     },
     {
      "cell_type": "code",
@@ -921,32 +1022,13 @@
       "from sklearn.metrics import roc_curve, roc_auc_score\n",
       "import seaborn\n",
       "fpr, tpr, _ = roc_curve(y_feature_test,y_score)\n",
-      "plt.plot(fpr,tpr);"
+      "plt.plot(fpr,tpr);\n",
+      "roc_auc_score(y_feature_test,y_score)"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
      "prompt_number": 165
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "roc_auc_score(y_feature_test,y_score)"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 169,
-       "text": [
-        "0.86295800281583745"
-       ]
-      }
-     ],
-     "prompt_number": 169
     },
     {
      "cell_type": "code",
@@ -2737,6 +2819,125 @@
       }
      ],
      "prompt_number": 266
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "Exception.message"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 19,
+       "text": [
+        "<attribute 'message' of 'exceptions.BaseException' objects>"
+       ]
+      }
+     ],
+     "prompt_number": 19
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "class myException(Exception):\n",
+      "    def __init__(self,message):\n",
+      "        self.args = [\"missing attribute: \" + message]"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 38
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "a = myException('hi')"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 39
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "raise a"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "ename": "myException",
+       "evalue": "missing attribute: hi",
+       "output_type": "pyerr",
+       "traceback": [
+        "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mmyException\u001b[0m                               Traceback (most recent call last)",
+        "\u001b[1;32m<ipython-input-40-dddb50e329a7>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mraise\u001b[0m \u001b[0ma\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+        "\u001b[1;31mmyException\u001b[0m: missing attribute: hi"
+       ]
+      }
+     ],
+     "prompt_number": 40
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "a.args = ['hi']"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 34
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "a.message"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 35,
+       "text": [
+        "'missing attribute: hi'"
+       ]
+      }
+     ],
+     "prompt_number": 35
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "raise a"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "ename": "myException",
+       "evalue": "hi",
+       "output_type": "pyerr",
+       "traceback": [
+        "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mmyException\u001b[0m                               Traceback (most recent call last)",
+        "\u001b[1;32m<ipython-input-36-dddb50e329a7>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mraise\u001b[0m \u001b[0ma\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+        "\u001b[1;31mmyException\u001b[0m: hi"
+       ]
+      }
+     ],
+     "prompt_number": 36
     },
     {
      "cell_type": "code",
